Application/wordpress/deployment2.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: wp-dep-2
  namespace: wordpress
spec:
  replicas: 2
  selector:
    matchLabels:
      app: wordpress-2
  template:
    metadata:
      labels:
        app: wordpress-2
    spec:
      # securityContext:
      #       fsGroup: 1000
      #       runAsUser: 0
      # serviceAccountName: wordpress-sa
      containers:
        - name: wordpress-container-2
          image: wordpress:latest
          # resources:
          #   limits:
          #     memory: "2Gi"
          #     cpu: "1000m"
          #   requests:
          #     memory: "500Mi"
          #     cpu: "500m"
          ports:
            - containerPort: 80
          livenessProbe:
            httpGet:
              path: "/"
              port: 80
            initialDelaySeconds: 90
            periodSeconds: 10
            timeoutSeconds: 5
            failureThreshold: 5
          readinessProbe:
            httpGet:
              path: "/"
              port: 80
            initialDelaySeconds: 60
            periodSeconds: 10
            timeoutSeconds: 5
            failureThreshold: 3
          volumeMounts: 
            - name: wordpress-file
              mountPath: /var/www/html
      volumes:
        - name: wordpress-file
          persistentVolumeClaim:
              claimName: efs-pvc
